tests/miniJava/pos/000653_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( false ) { } else if ( 0 ) { } else { } } }
