tests/miniJava/neg/006698_mutation.MiniJava
class java { public static void } ( String [ ] java ) { { } } }
